--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
   <header class="main-header">
-    <img src="img/logo-surface.svg" alt="Логотип" class="logo">
+   <div class="main-header__wrapper">
+      <img src="img/logo-surface.svg" alt="Логотип" class="logo">
+     <p class="main-header__site-category">for athlets and coaches</p>
+   </div>
     <div class="main-header__tagline">
       <p class="main-header__ready">be recruited</p>
       <p class="main-header__appeal">play college sports</p>
