--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
       <p class="main-header__ready">be recruited</p>
       <p class="main-header__appeal">play college sports</p>
     </div>
+    <div class="main-header__dowload-mobile">
+      <a href="#" class="btn-download">download on the <span>app store</span></a>
+      <a href="#" class="btn-download">get it on <span>google play</span></a>
+    </div>
     <nav class="main-header__navigation">
       <a href="#" class="main-header__navigation-sport">football</a>
       <a href="#" class="main-header__navigation-sport">basketball</a>
@@ -24,10 +28,6 @@
       <a href="#" class="main-header__navigation-sport">soccer</a>
       <a href="#" class="main-header__navigation-sport">ice hockey</a>
     </nav>
-    <div class="dowload-mobile">
-      <a href="#" class="btn-download">download on the app store</a>
-      <a href="#" class="btn-download">get it on google play</a>
-    </div>
   </header>
   <main>
     <section class="athlets">
